<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_actividad2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.examensegunda.Actividad2">

    <TextView android:id="@+id/lblelemento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblelemento"/>
    <EditText android:id="@+id/txtelemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblelemento"
        android:inputType="text"/>
    <Button android:id="@+id/btninfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btninfo"
        android:layout_below="@id/txtelemento"
        android:layout_centerHorizontal="true"/>
    <TextView android:id="@+id/lblsimbolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblsimbolo"
        android:textStyle="bold"
        android:layout_below="@id/btninfo"/>
    <TextView android:id="@+id/lblnumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblnumero"
        android:textStyle="bold"
        android:layout_below="@id/lblsimbolo"/>
    <TextView android:id="@+id/lblpeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblpeso"
        android:textStyle="bold"
        android:layout_below="@id/lblnumero"/>
    <TextView android:id="@+id/lblpunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblpunto"
        android:textStyle="bold"
        android:layout_below="@id/lblpeso"/>
    <TextView android:id="@+id/lbldensidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/lbldensidad"
        android:layout_below="@id/lblpunto"/>
    <Button android:id="@+id/btnvolver"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/volver"
        android:onClick= "volver"
        android:layout_alignParentRight="true" />
</RelativeLayout>
