<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.examensegunda.MainActivity">

    <TextView android:id="@+id/lblseleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblmenu"
        android:textSize="28sp"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:textStyle="bold"/>
    <Button android:id="@+id/btnact1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/act1"
        android:layout_below="@id/lblseleccion"
        android:onClick= "act1"/>
    <Button android:id="@+id/btnact2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/act2"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnact1"
        android:layout_centerVertical="true"
        android:onClick= "act2"/>
    <Button android:id="@+id/btnact3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnact2"
        android:text="@string/act3"
        android:onClick= "act3" />
    <Button android:id="@+id/btnsalir"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/salir"
        android:onClick= "salir"
        android:layout_alignParentRight="true" />
</RelativeLayout>
