<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_actividad1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.examensegunda.Actividad1">

    <TextView android:id="@+id/lblescoge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblescoge"/>
    <Button android:id="@+id/btnbilbao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnbilbao"
        android:layout_below="@id/lblescoge"
        android:onClick= "bilbao"/>
    <Button android:id="@+id/btnvitoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnvitoria"
        android:layout_below="@id/btnbilbao"
        android:layout_centerVertical="true"
        android:onClick= "vitoria"/>
    <Button android:id="@+id/btndonostia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnvitoria"
        android:text="@string/btndonostia"
        android:onClick= "donostia" />
    <TextView android:id="@+id/lblactual"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btndonostia"
        android:text="@string/lblactual"/>
    <TextView android:id="@+id/lblhora"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblactual"/>
    <TextView android:id="@+id/lbltemperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblhora"/>
    <TextView android:id="@+id/lblestado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbltemperatura"/>
    <Button android:id="@+id/btnvolver"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/volver"
        android:onClick= "volver"
        android:layout_alignParentRight="true" />
</RelativeLayout>
